--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^14.2.2",
     "axios": "^1.6.8",
     "next": "14.2.1",
     "react": "^18",
