--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@next/third-parties": "^14.2.2",
     "axios": "^1.6.8",
     "next": "14.2.1",
+    "prismjs": "^1.29.0",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/prismjs": "^1.26.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
